# mecatronica

./: LICENSE  README.md
Relatorio - Latex/: main.tdo  main.tex  mylib.bib
Relatorio - Latex/code/: c++.cpp  matlab.m  python.py
relatorio_latex/: main.tdo  main.tex  main.tex.backup  mylib.bib
relatorio_latex/xml/: circuito1.xml  circuito2.xml  estrutura_codigo.xml  readme.md  roomba.xml  vnc.xml
sensor/: CMakeLists.txt  package.xml
sensor/launch/: sensor.launch
sensor/src/: le_sensor.cpp  marca_minas.cpp  points_sensor.cpp  readme.txt  recebe_dados.cpp
